--- a/male.html
+++ b/male.html
@@ -199,7 +199,7 @@
     <!-- Hero Section Begin -->
     <section>
         <div class="d-block">
-            <img src="./img/banner/banner-nam.png"/>
+            <img src="./img/banner/bannernam-05.jpg"/>
         </div>
     </section>
     <!-- Hero Section End -->
