--- a/female.html
+++ b/female.html
@@ -757,21 +757,21 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-12 d-flex" style="align-content: space-between; flex-wrap: wrap;">
-                        <div class="footer__about">
-                            <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
-                            <ul>
-                                <li>Số 20 đường Mới, huyện Đông Anh, TP.Hà Nội</li>
-                                <li>1800.8001</li>
-                                <li>thoitrangscarlet@gmail.com</li>
-                            </ul>
-                        </div>
-                        <div class="d-block w-100 text-right hide-in-responsive">
-                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-facebook" aria-hidden="true"></i>
-                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-youtube" aria-hidden="true"></i>
-                            <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-instagram" aria-hidden="true"></i>
-                        </div>
+                <div class="col-lg-3 col-md-6 col-sm-12" style="align-content: space-between; flex-wrap: wrap;">
+                    <div class="footer__about">
+                        <h5 class="mb-3"><strong>ĐỊA CHỈ LIÊN HỆ</strong> <strong class="footer-responsive-icon"><i class="fa fa-caret-up" aria-hidden="true"></i></strong></h5>
+                        <ul>
+                            <li>Số 20 đường Mới, huyện Đông Anh, TP.Hà Nội</li>
+                            <li>1800.8001</li>
+                            <li>thoitrangscarlet@gmail.com</li>
+                        </ul>
                     </div>
+                    <div class="d-block w-100 text-right hide-in-responsive">
+                        <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-facebook" aria-hidden="true"></i>
+                        <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-youtube" aria-hidden="true"></i>
+                        <i style="font-size: 20px; padding: 0px 8px;" class="fa fa-instagram" aria-hidden="true"></i>
+                    </div>
+                </div>
             </div>
             <hr>
             <div class="row">
