--- a/product-details.html
+++ b/product-details.html
@@ -141,7 +141,7 @@
                       </div>
                     </div>
                   </div>
-                <div class="row hide-in-responsive d-flex">
+                <div class="row hide-in-responsive-flex">
                     <div class="col-lg-6 col-md-9">
                         <div class="tab-content h-100">
                             <div class="tab-pane active h-100" id="tabs-4" role="tabpanel">
