--- a/news.html
+++ b/news.html
@@ -253,7 +253,7 @@
                             <span class="text-grey">20/01/2024</span>
                         </div>
                         <div class="col-12">
-                            <h5><strong>3 cách mặc áo sơ mi bò denim nam cho chàng thêm nổi bật</strong></h5>
+                            <h5><strong>Top những sản phẩm thời trang mùa hè</strong></h5>
                         </div>
                     </div>
                 </div>
