--- a/category.html
+++ b/category.html
@@ -493,11 +493,11 @@
                 imgUrl: 'img/nu/1.jpg'
             },
             {
-                price: '449.500',
-                prePrice: '699.000',
-                title: 'Váy liền nữ interlock cổ bẻ dáng dài',
+                price: '149.500',
+                prePrice: '299.000',
+                title: 'Áo phông nữ cotton dáng ngắn in chữ',
                 discount: 50,
-                imgUrl: 'img/nu/6.jpg'
+                imgUrl: 'img/nu/aophong/aophong1/4.webp'
             },
             {
                 price: '399.500 đ',
