--- a/female.html
+++ b/female.html
@@ -819,13 +819,21 @@
                 discount: 50,
                 imgUrl: 'img/nu/1.jpg'
             },
+            // {
+            //     id: createGuid(),
+            //     price: '449.500',
+            //     prePrice: '699.000',
+            //     title: 'Váy liền nữ interlock cổ bẻ dáng dài',
+            //     discount: 50,
+            //     imgUrl: 'img/nu/6.jpg'
+            // },
             {
                 id: createGuid(),
-                price: '449.500',
-                prePrice: '699.000',
-                title: 'Váy liền nữ interlock cổ bẻ dáng dài',
+                price: '149.500 đ',
+                prePrice: '299.000',
+                title: 'Áo phông nữ cotton dáng ngắn in chữ',
                 discount: 50,
-                imgUrl: 'img/nu/6.jpg'
+                imgUrl: 'img/nu/aophong/aophong1/4.webp'
             },
             {
                 id: createGuid(),
