--- a/product-details.html
+++ b/product-details.html
@@ -646,7 +646,7 @@
                     <div class="row mb-4">
                         <div class="col text-center">
                             <div class="pb-3" style="border-bottom: 1px solid #000000;">
-                                <h3 >Đã thêm vào giở hàng</h3>
+                                <h3 >Đã thêm vào giỏ hàng</h3>
                             </div>
                         </div>
                     </div>
