--- a/admin-employees.html
+++ b/admin-employees.html
@@ -172,7 +172,7 @@
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">A</div>
                                                 <span class="ml-1 my-auto">
-                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                    <a class="text-dark" href="./admin-employee-edit.html">
                                                         Nguyễn Lạc An
                                                     </a>
                                                 </span>
@@ -189,13 +189,13 @@
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">M</div>
                                                 <span class="ml-1 my-auto">
-                                                    <a class="text-dark" href="./admin-customer-edit.html">
-                                                        Trần Khởi My
+                                                    <a class="text-dark" href="./admin-employee-edit.html">
+                                                        Nguyễn Dương
                                                     </a>
                                                 </span>
                                             </td>
-                                            <td class="border-0 align-middle">mytran12@gmail.com</td>
-                                            <td class="border-0 align-middle">098567432</td>
+                                            <td class="border-0 align-middle">duongnguyen@gmail.com</td>
+                                            <td class="border-0 align-middle">0987654321</td>
                                             <td class="border-0 align-middle">Hoàng Mai, Hà Nội</td>
                                             <td class="border-0 align-middle text-success">Đang hoạt động</td>
                                         </tr>
@@ -206,7 +206,7 @@
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">A</div>
                                                 <span class="ml-1 my-auto">
-                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                    <a class="text-dark" href="./admin-employee-edit.html">
                                                         Nguyễn Như An
                                                     </a>
                                                 </span>
@@ -223,7 +223,7 @@
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">L</div>
                                                 <span class="ml-1 my-auto">
-                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                    <a class="text-dark" href="./admin-employee-edit.html">
                                                         Chu Thê Long
                                                     </a>
                                                 </span>
@@ -240,7 +240,7 @@
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">L</div>
                                                 <span class="ml-1 my-auto">
-                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                    <a class="text-dark" href="./admin-employee-edit.html">
                                                         Đô Thị Lợi
                                                     </a>
                                                 </span>
@@ -257,7 +257,7 @@
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">B</div>
                                                 <span class="ml-1 my-auto">
-                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                    <a class="text-dark" href="./admin-employee-edit.html">
                                                         Lưu Như Bích
                                                     </a>
                                                 </span>
@@ -274,7 +274,7 @@
                                             <td class="border-0 align-middle d-flex">
                                                 <div class="circle">N</div>
                                                 <span class="ml-1 my-auto">
-                                                    <a class="text-dark" href="./admin-customer-edit.html">
+                                                    <a class="text-dark" href="./admin-employee-edit.html">
                                                         Nguyễn Lưu Nguyên
                                                     </a>
                                                 </span>
