--- a/admin-products.html
+++ b/admin-products.html
@@ -170,12 +170,12 @@
                                                 <input type="checkbox" class="checkboxItem" name="checkboxAll" value="0">
                                             </td>
                                             <td class="border-0 align-middle d-flex">
-                                                <img class="" src="img/nam/3.jpg" alt="" style="max-height: 50px;">
-                                                <a class="text-dark" href="/admin-product-edit.html"><span class="ml-1 my-auto">Áo khoác gió nam in họa tiết có túi khóa kéo</span></a>
+                                                <img class="" src="/img/nu/4.jpg" alt="" style="max-height: 50px;">
+                                                <a class="text-dark" href="/admin-product-edit.html"><span class="ml-1 my-auto">Váy liền nữ phối tay</span></a>
                                             </td>
                                             <td class="border-0 align-middle">55 trong kho</td>
                                             <td class="border-0 align-middle">mix</td>
-                                            <td class="border-0 align-middle">399,500 <span style="text-decoration: underline;">đ</span></td>
+                                            <td class="border-0 align-middle">599,000 <span style="text-decoration: underline;">đ</span></td>
                                             <td class="border-0 align-middle">5.0 (32 đánh giá)</td>
                                         </tr>
                                         <tr class="border-bottom item">
