--- a/admin-news.html
+++ b/admin-news.html
@@ -198,7 +198,7 @@
                                                     <img class="" src="img/news/3.png" alt="" style="max-height: 102px;">
                                                 </a>
                                             </td>
-                                            <td class="border-0 align-middle">Áo polo là gì ? </td>
+                                            <td class="border-0 align-middle">Top những sản phẩm thời trang mùa hè </td>
                                             <td class="border-0 align-middle">30/01/2024</td>
                                             <td class="border-0 align-middle">80 lượt xem</td>
                                         </tr>
